Versión final del script Rmd con ambos gráficos

--- a/m3pc1.html
+++ b/m3pc1.html
@@ -520,8 +520,7 @@ incrementa drásticamente su participación a lo largo del período,
 convirtiéndose en la principal contribuyente al empleo industrial de la
 muestra hacia los años más recientes. Mientras tanto, la participación
 de la región “Developed” disminuye considerablemente, y “Latin American”
-mantiene una cuota menor y relativamente estable.</em> ```</p>
-<hr />
+mantiene una cuota menor y relativamente estable.</em></p>
 </div>
 </div>
 
